@@ -4,6 +4,14 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/12/18
+	* Added hom_setting to specify which homunculus 'quirks' are in effect. The
+	  default activates all of them, if you set them to 0 then homuncs will not
+	  be treated in any special matter, pretty much like standard mobs. if I
+	  missed any 'quirky' homunc behaviour from it, report it so it can be added
+	  to the list.
+	* Made flooritem_lifetime a int so you can specify much longer life times
+	  (the default of 60k was already very close to the max of 65k)
+	* Removed monster_ai 0x80 since it's now handled by hom_setting.
 	* When walking into a Guild Dungeon your pvp_points will be set to 5 so you
 	  have to die twice before being warped out.
 	* If jobchanging while disguised, the disguise will be removed, since it
